# RiscOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  aarch64-elf.cmake  csr.h  entry.asm  fdt.c  fdt.h  kernel.c  kernel.elf  linker.ld  memory.c  memory.h  riscv64.cmake  run.sh  stdlib.c  stdlib.h  string.c  string.h
.nova/: Configuration.json
.nova/Tasks/: C, C++, Obj-C Debug.json
